[GM3Restyling] Increase issues line height in issues
With the Buttons migration, the "Unhide all" button in the IssuesPane
gets cut off when the focus is visible. In order to accomodate this,
this CL increases the height of the line and adjusts the margins.

Before: https://i.imgur.com/rmP1VLG.png
After: https://i.imgur.com/8ImBw8d.png
Fixed: 350628672
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5676126
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/issues/issuesTree.css
+++ b/front_end/panels/issues/issuesTree.css
@@ -20,6 +20,7 @@
 .issues li {
   white-space: normal;
   align-items: flex-start;
+  min-height: var(--sys-size-13);
 }
 
 /* Hide toggle for tree items which cannot be collapsed */
@@ -28,7 +29,7 @@
 }
 
 .issues li.parent::before {
-  margin-top: 8px;
+  margin-top: 10px;
 }
 
 .issues .affected-resources li.parent::before {
@@ -86,7 +87,6 @@
 
 .unhide-all-issues-button {
   margin: 0;
-  height: 20px;
 }
 
 p {
@@ -109,6 +109,10 @@ p {
   padding: 4px 0;
   cursor: pointer;
   width: 100%;
+
+  & > :not(.unhide-all-issues-button) {
+    margin-top: var(--sys-size-2);
+  }
 }
 
 .header devtools-hide-issues-menu {
